src/test/ui/feature-gates/feature-gate-rustc-attrs.stderr
error[E0658]: unless otherwise specified, attributes with the prefix `rustc_` are reserved for internal compiler diagnostics (see issue #29642)
  --> $DIR/feature-gate-rustc-attrs.rs:5:3
   |
LL | #[rustc_foo]
   |   ^^^^^^^^^
   |
   = help: add #![feature(rustc_attrs)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
